--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "register-service-worker": "^1.0.0",
     "roboto-fontface": "*",
     "vue": "^2.5.17",
+    "vue-analytics": "^5.16.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.8",
     "vuex": "^3.0.1"
