--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
   "name": "sopnopriyo",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "",
+  "author": "Shahin Alam",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-rc.1",
-    "@fortawesome/fontawesome-free": "^5.2.0",
-    "axios": "^0.18.0",
-    "jquery": "^3.3.1",
-    "register-service-worker": "^1.0.0",
-    "roboto-fontface": "*",
-    "vue": "^2.5.17",
-    "vue-analytics": "^5.16.2",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.3.8",
-    "vuex": "^3.0.1"
+    "@nuxtjs/auth": "^4.8.1",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "cookieparser": "^0.1.0",
+    "js-cookie": "^2.2.1",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
-    "@vue/cli-plugin-pwa": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "vue-cli-plugin-vuetify": "^0.2.0",
-    "vue-template-compiler": "^2.5.17"
+    "@nuxtjs/vuetify": "^1.2.2"
   }
 }
