--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "cookieparser": "^0.1.0",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.9.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.2.2"
