--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/markdownit": "^1.2.6",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/style-resources": "^1.0.0",
     "cookieparser": "^0.1.0",
     "js-cookie": "^2.2.1",
+    "markdown-it-attrs": "^3.0.1",
+    "markdown-it-div": "^1.1.0",
     "nuxt": "^2.9.2"
   },
   "devDependencies": {
